Fixed align issues, redid molly code, realign nuke an train

--- a/css/map.css
+++ b/css/map.css
@@ -30,14 +30,14 @@ body {
 }
 
 #smokes > div {
-	background: #f00;
 	position: absolute;
 	border-radius: 100%;
 	opacity: .8;
 	background: #9F9D9D;
 	box-sizing: border-box;
+	transform-origin: center;
 	border: #D7D7D7 solid .6vmin;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, 50%);
 	transition: opacity .3s;
 }
 
@@ -75,7 +75,7 @@ body {
 	background: #ff4848;
 	box-sizing: border-box;
 	border: #ce3f00 solid .2vmin;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, 50%);
 	transition: opacity .3s;
 }
 
@@ -94,8 +94,8 @@ body {
 	width: 2.2vmin;
 	bottom: -30%;
 	left: -30%;
-	transform: translate(-50%, -50%);
-	transform-origin: top left;
+	transform: translate(-50%, 50%);
+	transform-origin: bottom left;
 }
 
 #bomb.defused {
@@ -131,8 +131,8 @@ div.dot, div.label {
 	bottom: -100vh;
 	display: block;
 	background: #f00;
-	transform: translate(-50%, -50%);
-	transform-origin: top left;
+	transform: translate(-50%, 50%);
+	transform-origin: 0% 100%;
 	border-radius: 100% .2vmin 100% 100%;
 	box-shadow: 0 0 1.6vmin .8vmin rgba(0, 0, 0, .2);
 	opacity: 1;
